tests/errors/syn_class_var8.java
public class syn_class_var8 {
public static String[] name
}